fix: wrap text inside code blocks

--- a/docs/src/styles/prismjs.css
+++ b/docs/src/styles/prismjs.css
@@ -10,7 +10,7 @@ pre[class*='language-'] {
     'Courier New', Courier, monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
   font-size: 14px;
